<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="#fff"
    android:padding="20dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:padding="20sp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/logoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/Welcome_to_Instagram"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:padding="20sp"
        android:textSize="40sp"

        android:textColor="#000"/>

    <TextView
        android:id="@+id/sloganName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_continue"
        android:textSize="18sp"
        android:padding="20sp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        tools:ignore="UselessLeaf" >


        <EditText
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="#757575"
            android:padding="20sp"
            tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck" />


        <EditText
            android:id="@+id/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:passwordToggleEnabled="true"
            android:padding="20sp"
            tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck,TextContrastCheck,TouchTargetSizeCheck" />



        <Button
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:id="@+id/btn1"
            android:background="#00000000"
            android:elevation="0dp"
            android:text="@string/forget_passsword"
            android:textColor="#000"
            app:passwordToggleEnabled="true"
            android:padding="20sp"
            tools:ignore="RtlHardcoded,TextContrastCheck" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/btn2"
            android:onClick = "login"
            android:layout_marginBottom="5dp"
            android:background="#fff"
            android:text="@string/Go"
            android:padding="20sp"
            tools:ignore="TextContrastCheck,VisualLintButtonSize" />


        <Button
            android:id="@+id/SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:background="#00000000"
            android:elevation="0dp"
            android:minHeight="48dp"
            android:padding="20sp"
            android:text="@string/new_user"
            android:textColor="#000"
            tools:ignore="RtlHardcoded,VisualLintButtonSize,TextContrastCheck,TouchTargetSizeCheck" />

</LinearLayout>
</LinearLayout>